# aiassitant

./: .gitignore  .vercelignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  RUNPOD_CONNECT.md  RUNPOD_FLEET.md  RUNPOD_SETUP.md  SKILLS_AUDIT.md  requirements.txt  run.sh  verify_build.py
bay-dist/: index.html  robots.txt
docs/: AGENT_TOOLS_AND_FLOWS.md  APP_STORE_IOS.md  AUDIT_FIXES.md  AUTO_CHAIN.md  CLI_AND_WORKSPACE.md  CODE_REVIEW_2026-07-19.md  CODE_REVIEW_FULL_SITE_2026-07-19.md  CODE_REVIEW_SKILLS_2026-07-19.md  DOMAINS.md  FRONTEND_V2.md  GROWTH_TOOL_ACCESS.md  LAUNCH_100.md  LAUNCH_PLAN.md  MEETINGS.md  MOBILE_LAUNCH.md  PRODUCTION_APIS.md  PRODUCTION_RUNPOD.md  PRODUCTS.md  SKILL_PACKS_OVERVIEW.md  SQUAD_SHIP_NOTES.md  STORE_READY.md  STRIPE_SANDBOX.md  TWILIO_GMAIL.md
frontend/: .env.example  .env.native.example  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
scripts/: ECOSYSTEM_STATUS.md  SWARM_20_STATUS.md  SWARM_STATUS.md  _apply_require_owned.py  _apply_require_owned_pass2.py  _b02_chat_shot.mjs  _bulk_enable_demo_skills.py  _check_handler_table.py  _debug_bots_report.json  _extract_agent_skills_panel.py  _extract_business_products.py  _fetch_tasks_refresh.py  _fill_current_demo_team.py  _fill_trial_skills.py  _fix_encoding.py  _fix_pageshell.py  _hierarchy_shot_only.mjs  _inspect_db.py  _live_api_probe.py  _live_b04_goal.py  _live_chain_run.py  _live_chat_chain_probe.py  _live_create_queued_task.py  _live_hierarchy_probe.mjs  (+74 more)
(+349 files in other folders)
