[project]
name = "ai-business-assistant"
version = "1.4.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy==2.0.36",
  "pyjwt>=2.7.0",
  "stripe>=11.0.0",
  "httpx>=0.27.0",
  "pydantic==2.10.4",
  "anthropic>=0.42.0",
  "cryptography>=42.0.0",
  "psycopg2-binary>=2.9.9",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
]

[tool.vercel]
entrypoint = "api.index:app"
